fixed spacing in skiing

--- a/css/creative.css
+++ b/css/creative.css
@@ -69,7 +69,7 @@ section {
 }
 
 aside {
-    padding: 50px 0;
+    padding: 110px 0;
 }
 
 .no-padding {
